--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,27 +1,13 @@
-fastapi
-uvicorn[standard]
-
-python-dotenv
-motor
-
-pydantic[email]
-pydantic-settings
-
-PyJWT
-eth-account
-web3
-
-python-multipart
-
-groq
-
-apscheduler
-
-redis
-
-# Needed internally by web3 / eth-account sometimes
-eth-utils>
-eth-abi>
-
-# Production server (important for Render)
-gunicorn
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-dotenv==1.0.0
+motor==3.3.2
+pydantic==2.5.0
+pydantic-settings==2.1.0
+PyJWT==2.8.0
+eth-account==0.11.0
+web3==6.15.1
+python-multipart==0.0.6
+groq==0.4.2
+apscheduler==3.10.4
+redis==5.0.1
