--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -3,25 +3,20 @@ uvicorn[standard]==0.24.0
 
 python-dotenv==1.0.0
 motor==3.3.2
+pymongo==4.16.0
 
-pydantic[email]==2.5.0
+pydantic==2.5.0
 pydantic-settings==2.1.0
+pydantic[email]==2.5.0
 
 PyJWT==2.8.0
-eth-account==0.11.0
-web3==6.15.1
-
 python-multipart==0.0.6
+
+web3==6.15.1
+eth-account==0.11.0
 
 groq==0.4.2
 
 apscheduler==3.10.4
 
 redis==5.0.1
-
-# Needed internally by web3 / eth-account sometimes
-eth-utils>=2.3.0
-eth-abi>=4.2.0
-
-# Production server (important for Render)
-gunicorn==21.2.0
