--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.2.0",
     "axios": "^1.6.8",
     "ethers": "^6.11.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+
+    "@heroicons/react": "^2.1.5",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
