--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
 
     "@heroicons/react": "^2.1.5",
+    "@headlessui/react": "^1.7.18",
     "date-fns": "^3.6.0"
   },
   "devDependencies": {
