--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "molttip-backend",
   "version": "1.0.0",
-  "description": "Decentralized tipping infrastructure for AI agents",
-  "main": "src/server.js",
+  "description": "MoltTip Economy – In‑memory backend with AI fallback & agent bots",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.4"
   }
 }
