--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "winston": "^3.13.0"
     "uuid": "^10.0.0"
   },
   "devDependencies": {
