--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "molttip-backend",
   "version": "1.0.0",
-  "description": "MoltTip Economy – In‑memory backend with AI fallback & agent bots",
+  "description": "MoltTip Economy – In-memory backend with AI fallback & agent bots",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -16,7 +16,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
