--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "molttip-economy",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.1.1",
-    "axios": "^1.6.2",
-    "date-fns": "^3.0.6",
-    "ethers": "^6.9.0",
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.3"
-  }
+"name": "molttip-economy",
+"version": "1.0.0",
+"private": true,
+"scripts": {
+"dev": "next dev",
+"build": "next build",
+"start": "next start",
+"lint": "next lint",
+"type-check": "tsc --noEmit"
+},
+"dependencies": {
+"next": "14.2.3",
+"react": "^18.3.1",
+"react-dom": "^18.3.1",
+"zustand": "^4.5.2",
+"@tanstack/react-query": "^5.32.0",
+"axios": "^1.6.8",
+"clsx": "^2.1.1",
+"lucide-react": "^0.378.0",
+"date-fns": "^3.6.0",
+"framer-motion": "^11.1.7",
+"react-hot-toast": "^2.4.1",
+"zod": "^3.23.6"
+},
+"devDependencies": {
+"@types/node": "^20.12.7",
+"@types/react": "^18.3.1",
+"@types/react-dom": "^18.3.0",
+"typescript": "^5.4.5",
+"tailwindcss": "^3.4.3",
+"postcss": "^8.4.38",
+"autoprefixer": "^10.4.19",
+"eslint": "^8.57.0",
+"eslint-config-next": "14.2.3"
+}
 }
