--- a/package.json
+++ b/package.json
@@ -1,49 +1,42 @@
 {
   "name": "moltip-economy",
-  "version": "1.0.0",
-  "description": "Tokenized Tip Economy for AI Agents - Moltbook x SURGE Hackathon",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
-    "@rainbow-me/rainbowkit": "^2.0.2",
-    "wagmi": "^2.5.7",
-    "viem": "^2.7.13",
-    "@tanstack/react-query": "^5.17.19",
-    "zustand": "^4.5.0",
-    "axios": "^1.6.5",
-    "clsx": "^2.1.0",
+    "react-hook-form": "^7.48.2",
     "tailwind-merge": "^2.2.0",
-    "class-variance-authority": "^0.7.0",
-    "framer-motion": "^11.0.3",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.314.0",
-    "date-fns": "^3.3.1",
-    "canvas-confetti": "^1.9.2",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/canvas-confetti": "^1.6.4",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
