--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,20 +5,36 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@pages/*":      ["src/pages/*"],
+      "@stores/*":     ["src/stores/*"],
+      "@hooks/*":      ["src/hooks/*"],
+      "@mocks/*":      ["src/mocks/*"],
+      "@config/*":     ["src/config/*"],
+      "@lib/*":        ["src/lib/*"],
+      "@types/*":      ["src/types/*"]
+    },
+
+    /* Strict */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "exactOptionalPropertyTypes": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
